<resources>
    <string name="app_name">Anti-Monopoly</string>
    <string name="start_new_game">Start new game</string>
    <string name="join_game">Join game</string>
    <string name="load_game">Load game</string>
    <string name="game_instr">Game instructions</string>
    <string name="game_pin">Game PIN:</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your Name:</string>
    <string name="username">username</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="Startgame">Start game</string>
    <string name="Load">Load</string>
    <string name="ready">ready</string>
    <string name="not_ready">not ready</string>
    <string name="player_info">%1$s: %2$s</string>
    <string name="imagebutton">ImageButton</string>
    <string name="finish">Finish</string>


    <string name="field_square">field_square</string>
    <string name="start_field">start_field</string>
    <string name="price_war">Preiskrieg</string>
    <string name="sitting">sitting</string>

    <string name="take">take</string>

    <string name="rom1">Corso Impero</string>
    <string name="rom2">Via Roma</string>
    <string name="berlin1">Alexanderplatz</string>
    <string name="berlin2">Kurfürstendamm</string>
    <string name="berlin3">Potsdamer Straße</string>
    <string name="madrid1">Plaza Mayor</string>
    <string name="madrid2">Gran Via</string>
    <string name="madrid3">Passeo de la Castellana</string>
    <string name="amsterdam1">Dam</string>
    <string name="amsterdam2">Leidsestraat</string>
    <string name="amsterdam3">Kalverstraat</string>
    <string name="paris1">Rue la Fayette</string>
    <string name="paris2">Rue de la Paix</string>
    <string name="paris3">Champs-Elysees</string>
    <string name="bruessel1">Grote Markt</string>
    <string name="bruessel2">Hoogstraat</string>
    <string name="bruessel3">Nieuwstraat</string>
    <string name="london1">Park Lane</string>
    <string name="london2">Picadelly</string>
    <string name="london3">Oxford Street</string>
    <string name="athen1">La Plaka</string>
    <string name="athen2">Syntagma</string>





    <!-- Field descriptions -->
    <string name="field_square_description">Dies ist ein allgemeines Feld.</string>
    <string name="start_field_description">Dies ist das Startfeld.</string>
    <string name="prison_field_description">Dies ist das Gefängnisfeld.</string>
    <string name="price_war_field_description">Dies ist das Preis- und Kriegsfeld.</string>
    <string name="sitting_field_description">Dies ist das Sitzfeld.</string>
    <string name="rom1_field_description">Dies ist das Rom-Feld.</string>
    <string name="take_field_description">Dies ist ein Event-Feld.</string>
    <string name="income_tax_field_description">Einkommenssteuer </string>
    <string name="airport_field_description">Flughafen</string>
    <string name="railway_field_description">Bahnhof</string>
    <string name="company_field_description">Unternehmen</string>
    <string name="berlin1_field_description">Berkin1.</string>
    <string name="berlin2_field_description">Berkin2.</string>
    <string name="berlin3_field_description">Berkin3.</string>



    <string name="todo">TODO</string>
    <string name="rent">Rent:</string>
    <string name="hotel_price">Hotel Price:</string>
    <string name="house_price">House Price:</string>
    <string name="street_name">Street Name:</string>
    <string name="price">Price:</string>
    <string name="textview">TextView</string>
    <string name="owner">Owner:</string>

    <string name="roles">Roles</string>
    <string name="x_close">X</string>
    <string name="your_role_is">You are a %1$s, your username is %2$s \n and you have the %3$s figure!</string>
    <string name="player_figure">Player figure</string>
    <string name="roll_dice">roll dice</string>
    <string name="buy">Buy</string>
    <string name="hypothek">Hypothek</string>
    <string name="buy_house">Buy House</string>
    <string name="settings">Settings</string>
    <string name="x">X</string>
    <string name="avatar">Avatar</string>
    <string name="unready">not ready</string>
    <string name="player_name">Player Name</string>
    <string name="back">Back</string>
    <string name="join">Join</string>
    <string name="Cheating">Cheating</string>
    <string name="figure">Figure</string>
    <string name="pin">Pin:</string>
    <string name="settings_button">Settings button</string>
    <string name="bus_operators">Busbetriebe</string>
    <string name="gaswerk">Gaswerk</string>
    <string name="train_station">Bahnhof</string>
    <string name="tram">Straßenbahn</string>
    <string name="power_station">Elektrizitätswerk</string>


</resources>