<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppName_Style"/>

    <Button
        android:id="@+id/lobby_start_game"
        style="@style/Buttons_Style"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Startgame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/lobby_cancel"
        style="@style/Buttons_Style"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow>

            <TextView
                android:id="@+id/coll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coll4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold"  />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/coll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coll5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold"  />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/coll3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold"  />

            <TextView
                android:id="@+id/coll6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:textSize="20sp"
                android:textStyle="bold"  />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>